# telnyx-livekit-plugin

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: full_stack.py  minimal_agent.py
livekit-plugins-telnyx/: pyproject.toml
telnyx-livekit-plugin/: pyproject.toml
telnyx-livekit-plugin/livekit/plugins/telnyx/: __init__.py  stt.py  tts.py
telnyx-livekit-plugin/livekit/plugins/telnyx/deepgram/: __init__.py  stt.py
tests/: test_deepgram_params.py  test_e2e_livekit.py  test_e2e_sample_rate.py  test_keywords_nova2.py  test_llm.py  test_minimax_tts.py  test_smart_format.py  test_smart_format_e2e.py  test_stt.py  test_stt_e2e.py  test_tts.py  test_tts_e2e.py  test_tts_minimax_last_sentence.py  test_tts_persistent_ws.py  test_tts_sample_rate.py  test_voices_tts.py
tests/agents/: test_agent.py  test_agent_sample_rate.py
tests/assets/: README.md
