[project]
name = "telnyx-livekit-plugin-workspace"
version = "0.1.0"
description = "Telnyx plugin for LiveKit Agents — STT, TTS, and LLM"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "livekit-agents>=1.4.4",
    "livekit-api>=0.6.0",
    "telnyx-livekit-plugin",
    "livekit-plugins-openai>=0.8.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
telnyx-livekit-plugin = { path = "telnyx-livekit-plugin" }

[tool.uv]
package = false
