[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-telnyx"
version = "0.2.0"
description = "Telnyx STT/TTS plugins for LiveKit Agents — with full Deepgram parameter support"
requires-python = ">=3.10,<3.15"
dependencies = [
    "livekit-agents>=0.8.0",
    "livekit-api>=0.6.0",
    "aiohttp>=3.10.0",
]

[project.urls]
Repository = "https://github.com/team-telnyx/livekit-plugins"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]
