[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telnyx-livekit-plugin"
version = "0.2.0"
description = "Telnyx plugin for LiveKit Agents — STT, TTS, and LLM with full Deepgram parameter support"
requires-python = ">=3.10,<3.15"
dependencies = [
    "livekit-agents>=0.8.0",
    "livekit-api>=0.6.0",
    "aiohttp>=3.10.0",
]

[project.urls]
Repository = "https://github.com/team-telnyx/telnyx-livekit-plugin"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]
